fixed alignment of items within card.

--- a/css/projects.css
+++ b/css/projects.css
@@ -14,4 +14,7 @@
   font-family: "Marcellus", serif;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
